# dark-experience-replay

./: LICENSE  README.md  config.py  main.py  pyproject.toml  utils.py
hyperparameters/: perm-mnist.yaml  rot-mnist.yaml  seq-mnist.yaml
notebooks/: mnist.ipynb  showcase.ipynb  showcase_cifar10.ipynb  test.ipynb  validation.ipynb
src/: augmentations.py  dataset.py  metric.py  model_selection.py  models.py  replay.py  reservoir.py
src/datasets/: cifar10.py  perm_mnist.py  rotated_mnist.py  sampler.py  seq_mnist.py  tiny_imagenet.py
