[tool.poetry]
name = "dark-experience-replay"
version = "0.1.0"
description = "Implementation of Dark Experience Replay (DER) in Python"
authors = ["FabrizioDeCastelli <decastellifabrizio@gmail.com>"]
license = "MIT"
readme = "README.md"

[MASTER]
init-hook='import sys; sys.path.append(".")'

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.5.0.post0"
avalanche-lib = "^0.6.0"
qpsolvers = "^4.4.0"
jupyter = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^24.3"
ruff = "^0.7.4"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
